Bug 489089 - JSON.parse is way slower than it needs to be  (r=igor/sayrer).